# orpheus

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ISSUES.md  LICENSE  Makefile  README.md  Tiltfile  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
apps/api/: .golangci.yml  Dockerfile  Makefile  README.md  go.mod  go.sum
apps/api/api/: openapi.json
apps/api/cmd/api/: main.go
apps/api/cmd/canary/: main.go
apps/api/cmd/migrate/: main.go
apps/api/cmd/orpheus-publish/: main.go
apps/api/internal/audit/: audit_integration_test.go  middleware.go  middleware_test.go
apps/api/internal/auth/: apikey.go  auth_test.go  keycloak.go  keys_test.go  middleware.go  principal.go  require_role_test.go  scope_test.go
apps/api/internal/authz/: authz.go  authz_test.go  middleware.go  policy.rego
apps/api/internal/avscan/: avscan.go  avscan_integration_test.go  avscan_test.go
apps/api/internal/batching/: service.go  service_integration_test.go
apps/api/internal/billing/: dodo.go  provider.go  rollup.go  rollup_test.go  stub.go  webhook_test.go
apps/api/internal/canary/: canary.go  canary_test.go
apps/api/internal/config/: config.go  config_test.go
apps/api/internal/db/: apikeys.go  db.go  db_rls_test.go  db_test.go  migrate.go  role_test.go  sqlc.yaml
apps/api/internal/dbtx/: dbtx.go  dbtx_test.go
apps/api/internal/delivery/: delivery.go
apps/api/internal/e2e/: e2e_test.go  extract_metadata_e2e_test.go  loadtest_test.go  phase12_e2e_test.go  prd0610_e2e_test.go  prd_features_e2e_test.go  probe_e2e_test.go  queue_e2e_test.go  slice_e2e_test.go  transcribe_long_e2e_test.go
apps/api/internal/erasure/: service.go  service_integration_test.go
apps/api/internal/handlers/: api_keys.go  api_keys_test.go  artifacts.go  artifacts_test.go  audiosniff.go  audiosniff_test.go  batches.go  batches_integration_test.go  billing.go  billing_integration_test.go  budgets.go  bundles.go  bundles_integration_test.go  cache.go  cache_integration_test.go  cache_test.go  common.go  destinations.go  docs.go  erasure.go  erasure_integration_test.go  health.go  health_test.go  jobs.go  jobs_requeue_test.go  jobs_test.go  jobs_validation_test.go  marketplace.go  metrics.go  onboarding.go  (+25 more)
apps/web/: README.md  package.json
apps/web/app/: layout.tsx  page.tsx
apps/workers/: DIARIZE_TODO.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
apps/workers/src/orpheus_workers/: __init__.py  catalog.py  config.py  control_plane.py  db.py  diarize.py  ffmpeg.py  ffprobe.py  grpc_server.py  llm.py  logging.py  metrics.py  model_registry.py  redact.py  s3.py  streaming.py  transcribe.py  validation.py  worker.py
apps/workers/src/orpheus_workers/observability/: tracing.py
apps/workers/src/orpheus_workers/processors/: __init__.py  audio_ops.py  convert_to_wav.py  export_bundle.py  extract_metadata.py  ingest_url.py  probe.py  redact.py  slice.py  text_ops.py  transcribe.py
apps/workers/src/orpheus_workers_control/: __init__.py  __main__.py
apps/workers/src/orpheus_workers_grpc/: __init__.py  __main__.py
apps/workers/src/orpheus_workers_worker/: __init__.py  __main__.py
apps/workers/tests/: conftest.py  test_audio_ops.py  test_catalog.py  test_control_plane.py  test_convert_to_wav.py  test_export_bundle.py  test_extract_metadata.py  test_ingest_url.py  test_manifest.py  test_metrics.py  test_model_registry.py  test_probe.py  test_queue_depth.py  test_redact.py  test_redact_processor.py  test_slice.py  test_streaming.py  test_text_ops.py  test_transcribe.py  test_validation.py  test_worker.py
apps/workflows/: README.md  pyproject.toml
apps/workflows/orpheus_workflows/: __init__.py  activities.py  models.py  transcribe_long.py  worker.py
apps/workflows/orpheus_workflows/transcribe_long/: __init__.py  workflow.py
apps/workflows/tests/: test_transcribe_long.py
docs/: IMPLEMENTATION_STATUS.md  LOAD_TESTING.md  SLOs.md
docs/adr/: 0000-template.md  0001-modular-monolith.md  0002-fastapi.md  0003-postgres-rls.md  0004-arq-temporal.md  0005-model-versioning.md  0006-s3-presigned.md  0007-keycloak.md  0008-gvisor-sandbox.md  0009-gitops-argocd.md  0010-observability.md  0011-cost-targets.md  0012-monorepo.md  0013-polyglot.md  README.md
docs/architecture/: PRODUCTION_DESIGN.md
docs/design/: 09-temporal-workflows.md  10-gpu-inference.md  11-web-ui-and-billing.md  12-streaming-realtime.md
docs/prd/: 01-content-hash-dedup.md  02-artifact-bundles.md  03-webhook-tester-replay.md  04-translate-summarize.md  05-diarization-subtitles.md  06-batch-callback-tenant-s3.md  07-usage-analytics-budgets.md  08-pii-redaction.md  09-resumable-url-ingest.md  10-gdpr-erasure.md  README.md
docs/runbooks/: api-5xx-spike.md  canary-failing.md  outbox-not-draining.md  postgres-connection-exhaustion.md  webhook-delivery-failing.md  worker-pod-crashloop.md
infra/: DEPLOY.md  HARDENING.md  README.md
infra/argocd/: appset.yaml  project.yaml
infra/argocd/applications/: orpheus-api-dev.yaml  orpheus-api-staging.yaml  orpheus-worker-dev.yaml  orpheus-worker-staging.yaml
infra/canary/: deployment.yaml
infra/helm/orpheus-api/: Chart.yaml  values-dev.yaml  values-staging.yaml  values.yaml
infra/helm/orpheus-worker/: Chart.yaml  values-dev.yaml  values-staging.yaml  values.yaml
infra/k8s/: networkpolicy-community-sandbox.yaml  runtimeclass-gvisor.yaml
infra/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
keycloak/: README.md  realm-orpheus.json  test-token.sh
monitoring/: README.md  docker-compose.observability.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/alertmanager/secrets/: .gitignore  README.md  pagerduty_routing_key  slack_webhook_url
monitoring/grafana/dashboards/: api.json  cost-usage.json  database-rls.json  workers-queue.json
monitoring/loki/: config.yaml
monitoring/otel-collector/: config.yaml
monitoring/prometheus/: alerts.yml  prometheus.yml
monitoring/tempo/: config.yaml
postgres/init/: 01-keycloak-db.sql
scripts/: README.md  ci-db-setup.sh
(+108 files in other folders)
