[project]
name = "orpheus-workers"
version = "0.1.0"
description = "Orpheus worker plane — async audio processing (Phase 2)"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

# Phase 0: empty. Phase 2 will add:
#   - FastAPI control plane (Arq / Temporal worker registration, health)
#   - arq (Redis-backed queue) for short jobs
#   - temporalio for long-running workflows
#   - ray[serve] + ray[gpu] for GPU inference (transcription, separation)
#   - pydantic, httpx, structlog, opentelemetry-*
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orpheus_workers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
