[project]
name = "orpheus-workers"
version = "0.1.0"
description = "Orpheus worker plane — async audio processing (Phase 2)"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "arq>=0.25.0",
    "redis>=5.0.0",
    "orpheus-contracts",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "boto3>=1.34.0",
    "psycopg[binary,pool]>=3.1.0",
    "mutagen>=1.47.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.orpheus_workers]
grpc_port = 50051
http_port = 8081
redis_url = "redis://localhost:6379/0"
log_level = "INFO"
worker_concurrency = 4

[tool.uv.sources]
orpheus-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orpheus_workers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
