[project]
name = "orpheus-workers"
version = "0.1.0"
description = "Orpheus worker plane — async audio processing (Phase 2)"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "nats-py>=2.10.0",
    "orpheus-contracts",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "boto3>=1.34.0",
    "psycopg[binary,pool]>=3.1.0",
    "mutagen>=1.47.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "faster-whisper>=1.0.0",
    "ctranslate2>=3.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Real CPU speaker diarization (PRD 05). Heavy (torch); installed on demand.
# Without it, audio.diarize falls back to the deterministic stub.
diarize = ["pyannote.audio>=3.1"]
# ML NER for PII (PRD 08). Without it, redaction uses the regex detector.
pii = ["presidio-analyzer>=2.2"]

[project.scripts]
orpheus-streaming = "orpheus_workers.streaming:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.orpheus_workers]
grpc_port = 50051
http_port = 8081
redis_url = "redis://localhost:6379/0"
log_level = "INFO"
worker_concurrency = 4

[tool.uv.sources]
orpheus-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/orpheus_workers",
    "src/orpheus_workers_control",
    "src/orpheus_workers_grpc",
    "src/orpheus_workers_worker",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
