[project]
name = "orpheus-workflows"
version = "0.1.0"
description = "Temporal workflows for Orpheus multi-step orchestration (transcribe-long)"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.8",
    "structlog>=24.1.0",
    "orpheus-workers",
]

[tool.uv.sources]
orpheus-workers = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orpheus_workflows"]
